# django-util

./: .cursorrules  .gitattributes  .gitignore  404.html  CHANGES.rst  LICENSE  MANIFEST.in  README.md  README.rst  RELEASE.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.cfg  setup.py  setup.sh
admin/: index.html
choices/: index.html
constants/: index.html
django_util/: __init__.py  _version.py  admin.py  choices.py  constants.py  fields.py  models.py  signals.py  tests.py  utility.py  validators.py
django_util/management/commands/: truncate_table.py
django_util/scripts/: truncate_table.py
django_util/templatetags/: build_url.py  django_util.py  general_tag.py  image_url.py  pagination_url.py  social_media_tag.py
docs/: admin.md  choices.md  constants.md  fields.md  index.md  models.md  signals.md  templatetags.md  utility.md  validators.md
explanation/: index.html
fields/: index.html
how-to-guides/: index.html
models/: index.html
reference/: index.html
signals/: index.html
templatetags/: index.html
tutorials/: index.html
utility/: index.html
validators/: index.html
